# task-manager-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 7f3a9c41d2e8_add_tasks_keyset_pagination_index.py  ba6bfb255145_create_users_and_tasks_tables.py
src/: config.py
src/application/commands/: change_task_status.py  create_task.py  create_user.py  delete_task.py
src/application/commands/handlers/: change_task_status_handler.py  create_task_handler.py  create_user_handler.py  delete_task_handler.py
src/application/common/: dto.py  exceptions.py  interfaces.py  pagination.py
src/application/interfaces/: repositories.py  unit_of_work.py
src/application/queries/: get_task.py  get_task_stats.py  get_user.py  get_user_tasks.py
src/application/queries/handlers/: get_task_handler.py  get_task_stats_handler.py  get_user_handler.py  get_user_tasks_handler.py
src/domain/: exceptions.py  value_objects.py
src/domain/entities/: base.py  task.py  user.py
src/domain/events/: base.py  task_events.py  user_events.py
src/infrastructure/db/: database.py  models.py  unit_of_work.py
src/infrastructure/di/: container.py
src/infrastructure/repositories/: task_repository.py  user_repository.py
src/interfaces/api/: exception_handlers.py  main.py  schemas.py
src/interfaces/middlewares/: logging.py
tests/e2e/: conftest.py  test_api.py  test_container.py
tests/integration/infrastructure/: conftest.py  test_task_repository.py  test_unit_of_work.py  test_user_repository.py
tests/unit/application/: conftest.py  test_command_handlers.py  test_query_handlers.py
tests/unit/domain/: test_task_aggregate.py  test_user_aggregate.py  test_value_objects.py
(+2 files in other folders)
